<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DictionaryLearner</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_word">Add Word</string>
    <string name="word_label">Word</string>
    <string name="meaning_label">Meaning</string>
    <string name="update_button_label">Update word</string>
    <string name="delete_button_label">Delete Word</string>
    <string name="edit_word">Edit Word</string>
    <string name="settings">Settings</string>
    <string name="setting_update">Update</string>
    <string name="warning_wrong_rotator_value">Enter valid rotator value</string>
    <string name="success_activity_message">Success</string>
    <string name="new_ms_is_zero">0</string>
    <string name="failed_activity_message">Failed</string>
    <string name="warning_empty_word_to_delete">Empty word is requested to delete</string>
    <string name="warning_empty_fields">Fields can\'t be empty</string>
    <string name="hint_rotator_millis">New rotation time (in ms)</string>
    <string name="quiz_play_button">Play Quiz</string>
    <string name="quiz_question">Quiz question</string>
    <string name="submit_quiz_answer_button">Submit</string>
    <string name="add_to_rotator_list">Add to rotator</string>
    <string name="next_quiz_question_button">Next Question</string>
    <string name="quiz_completion_hurrey_notification">Hurrey!!</string>
    <string name="quiz_completion_message_notification">Quiz is completed</string>
    <string name="play_quiz">Play Quiz</string>
    <string name="quiz_completed_message">Quiz Completed</string>
    <string name="quiz_completion_guest_message">Hi </string>
    <string name="quiz_completion_total_answered">Total Answered: </string>
    <string name="quiz_completion_total_wrong">Total Wrong: </string>
    <string name="quiz_completion_total_left">Total UnAnswered: </string>
    <string name="give_username_label">Enter Username</string>
    <string name="word_stop_slide_buttonLabel">Stop Show</string>
    <string name="next_word_buttonLabel">Random Word</string>
    <string name="word_start_slide_buttonLabel">Start show</string>

</resources>
