<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:id="@+id/quiz_question_text"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/quiz_question"
            android:textColor="#ff1e32ce"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/quiz_question_radioOptions"
                android:layout_weight="0.6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:text="Options 1" />

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:text="Options 2" />

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:text="Options 3" />

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:text="Options 4" />
            </RadioGroup>
                <ImageView
                    android:id="@+id/answer_image_button"
                    android:layout_width="wrap_content"
                    android:src="@drawable/cross_mark"
                    android:visibility="invisible"
                    android:layout_weight="0.4"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content" />
        </LinearLayout>


        <Button
            android:id="@+id/quiz_submit_answer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/submit_quiz_answer_button" />

        <Button
            android:id="@+id/quiz_next_question_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_quiz_question_button" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_rotator_list" />

    </LinearLayout>
</ScrollView>